# devnet-deployments

./: .env.example  .gitignore  Cargo.toml  PRODUCTION_READINESS_REPORT.md  README.md  RELAYER_HANDSHAKE.md  build_and_restart.sh  ecosystem.config.js  package-lock.json  package.json  pull_subtrees.sh  refresh_all.sh  setup.sh  test_plan.md  validation-registry.abi.json  vitest.config.ts
identity-registry/: Cargo.toml
identity-registry/interactor/: Cargo.toml  state.toml
identity-registry/interactor/src/: interact.rs  interactor_main.rs
identity-registry/interactor/tests/: interact_cs_tests.rs
identity-registry/meta/src/: main.rs
identity-registry/src/: views.rs
identity-registry/wasm/src/: lib.rs
mx-8004/reputation-registry/: Cargo.toml  sc-config.toml
mx-8004/reputation-registry/interactor/src/: interact.rs  interactor_main.rs
mx-8004/reputation-registry/src/: errors.rs  events.rs  lib.rs  storage.rs  utils.rs
mx-8004/reputation-registry/wasm/: Cargo.toml
src/: lib.rs  (+5 more)
tests/: Cargo.toml  pkg_3_reputation.rs  pkg_4_facilitator.rs  pkg_5_mcp.rs  pkg_7_e2e.rs  suite_e2_moltbot_update.rs  suite_e_moltbot_lifecycle.rs  suite_i_relayed_agent_ops.rs  suite_j_relayed_facilitator_settle.rs  suite_l_mcp_agent_discovery.rs  suite_m_agent_to_agent_flow.rs  suite_o_mcp_tool_coverage.rs  suite_p_identity_extended.rs  suite_r_reputation_extended.rs  suite_u2_facilitator_advanced.rs  suite_v2_relayer_advanced.rs  suite_v_relayer_extended.rs  suite_w_moltbot_extended.rs
tests/common/: mod.rs
tests/pkg_1_identity/: test_agent_update.rs  test_service_configs.rs
tests/pkg_2_validation/: test_payment_errors.rs
tests/pkg_3_reputation/: test_direct_feedback.rs  test_reputation_averaging.rs  test_submit_feedback.rs
tests/pkg_4_facilitator/: mod.rs  test_rejection_cases.rs  test_relayed_v3.rs  test_settle_egld.rs  test_settle_esdt.rs
tests/pkg_5_mcp/: mod.rs  test_account_tools.rs  test_registry_tools.rs  test_transfer_tools.rs
tests/pkg_6_moltbot/: mod.rs  test_402_flow.rs  test_gasless_registration.rs  test_update_flow.rs
tests/pkg_7_e2e/: mod.rs  test_chain_of_command.rs  test_full_agent_lifecycle.rs
tests/pkg_8_escrow/: test_deposit_egld.rs  test_deposit_release.rs  test_error_edge_cases.rs  test_multi_job.rs  test_refund_after_deadline.rs  test_unauthorized_release.rs
tests/tests/: escrow_tests.rs
tests/unit/: architect.test.ts  settler.test.ts  storage.test.ts
validation-registry/: Cargo.toml  sc-config.toml
validation-registry/interactor/: Cargo.toml
validation-registry/interactor/src/: interact.rs  validation_registry_proxy.rs
validation-registry/interactor/tests/: interact_cs_tests.rs
validation-registry/meta/: Cargo.toml
validation-registry/meta/src/: main.rs
validation-registry/src/: events.rs  storage.rs  views.rs
validation-registry/wasm/: Cargo.toml
(+226 files in other folders)
