[package]
name = "identity-registry"
version = "0.1.0"
authors = ["Antigravity"]
edition = "2024"
publish = false

[dependencies.multiversx-sc]
version = "0.64.1"

[dependencies.multiversx-sc-modules]
version = "0.64.1"

[dependencies.common]
path = "../common"

[dev-dependencies.multiversx-sc-scenario]
version = "0.64.1"

[lib]
path = "src/lib.rs"
name = "identity_registry"
