[package]
name = "mx-8004-tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
identity-registry = { path = "../identity-registry" }
validation-registry = { path = "../validation-registry" }
reputation-registry = { path = "../reputation-registry" }
escrow = { path = "../escrow" }
common = { path = "../common" }
proxies = { path = "../proxies" }
multiversx-sc = { version = "0.64.1" }
multiversx-sc-scenario = { version = "0.64.1" }
multiversx-sc-snippets = { version = "0.64.1" }
tokio = { version = "1.24" }
serial_test = { version = "3.2.0" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
env_logger = "0.11"

[features]
chain-simulator-tests = []
