[package]
name = "reputation-registry"
version = "0.1.0"
authors = ["Antigravity"]
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"
name = "reputation_registry"

[dependencies.multiversx-sc]
version = "0.64.1"

[dependencies.proxies]
path = "../proxies"

[dependencies.common]
path = "../common"

[dev-dependencies.multiversx-sc-scenario]
version = "0.64.1"

[dev-dependencies.validation-registry]
path = "../validation-registry"

[dev-dependencies.identity-registry]
path = "../identity-registry"

